syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "GamesService.Protos";
service Games{
	rpc GetGamesList (google.protobuf.Empty) returns (GetGamesListReply);
	rpc AddGame (GameInfo) returns (AddGameReply);
	rpc DeleteGame (DeleteGameRequest) returns (DeleteGameReply);
	rpc UpdateGame (GameInfo) returns (UpdateGameReply);
}
message GetGamesListReply{
	repeated GameInfo games = 1;
}
message GameInfo{
	string GameId = 1;
	string LocalizationKey = 2;
	string ImageUrl = 3;
	bool SupportSinglePlayer = 4;
	bool StaticPlayersCount = 5;
	int32 MinPlayersCount = 6;
	int32 MaxPlayersCount = 7;
	string GameLogicServerUrl = 8;
}
message AddGameReply{
	bool isSuccess = 1;
	optional string errorMessage = 2;
}
message DeleteGameRequest{
	string gameId = 1;
}
message DeleteGameReply{
	bool isSuccess = 1;
	optional string errorMessage = 2;
}
message UpdateGameReply{
	bool isSuccess = 1;
	optional string errorMessage = 2;
}